@startuml
'https://plantuml.com/class-diagram

class Employee{
    name
    phoneNumber
    email
    password
    employeeID
    socCode
    organizationRole
    address
}
class Administrator {
}

class Parameter {
code
shortName
description
}

class ParameterCategory{
code
name
}
class User{
    name
    email
    password
}
User "1" - "0..1" Employee: relates to <
Company "1" -- "1..*" Employee: has >
Employee <|-- Administrator
Administrator "1" -- "1" Employee: creates >
Administrator "1" -- "1" ParameterCategory : creates >
Administrator "1" -- "1..*" Parameter : creates >
Parameter "*" -- "1"    ParameterCategory : presented under >
Company "1" -- "*" ParameterCategory: adopts >
Company "1" - "*" Parameter: adopts >
@enduml